--- a/routing/html/login.html
+++ b/routing/html/login.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>login</title>
-</head>
-<body>
-    <input type="email">
-    <input type="password">
-    <button id="submit">Submit</button>
+  </head>
+  <body>
+    <input type="email" id="email-input" />
+    <input type="password" id="password-input" />
+    <button id="sign-in">Sign in</button>
+    <button id="sign-up">Sign up</button>
 
     <script>
-        const submit = document.getElementById('submit');
-        submit.addEventListener('click', () => {
-            document.cookie = 'email=pavlovskyi.ve@gmail.com';
-            document.cookie = 'password=FFff1488';
-            fetch('user', {
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                method: "POST",
-                body: JSON.stringify({"email": "pavlovskyi.ve@gmail.com", "password": "FFff1488"})
-            }).then(res => {
-                if (res.status='200') {
-                    window.location.replace('/todo.html');
-                } 
-            });
-        })
+      const signIn = document.getElementById("sign-in");
+      const email = document.getElementById("email-input");
+      const password = document.getElementById("password-input");
+      const signUp = document.getElementById("sign-up");
+
+      signUp.addEventListener(
+        "click",
+        () => (window.location.href = "/register.html")
+      );
     </script>
-</body>
+    <script src="login.js"></script>
+  </body>
 </html>
