--- a/routing/html/index.html
+++ b/routing/html/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>hello</h1>
-    <a href="/login.html">login</a>
+    <a href="/routing/html/login.html">login</a>
   </body>
 </html>
