--- a/routing/html/login.html
+++ b/routing/html/login.html
@@ -20,9 +20,9 @@
 
       signUp.addEventListener(
         "click",
-        () => (window.location.href = "/register.html")
+        () => (window.location.href = "/routing/html/register.html")
       );
     </script>
-    <script src="login.js"></script>
+    <script src="/routing/js/login.js"></script>
   </body>
 </html>
