--- a/routing/html/register.html
+++ b/routing/html/register.html
@@ -18,5 +18,5 @@
     const password2 = document.getElementById("password-input2");
     const signUp = document.getElementById("sign-up");
   </script>
-  <script src="register.js"></script>
+  <script src="/routing/js/register.js"></script>
 </html>
