--- a/routing/html/todo.html
+++ b/routing/html/todo.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/routing/css/style.css" />
   </head>
   <body>
     <div id="container">
@@ -51,6 +51,6 @@
         }
       });
     </script>
-    <script src="todo.js"></script>
+    <script src="/routing/js/todo.js"></script>
   </body>
 </html>
